# AtlantOS_QC

./: .gitignore  AUTHORS  CITATION.cff  MANIFEST.in  README.md  clean_atlantos.sh  compile_atlantos.sh  launch_atlantos.sh  launch_atlantos_clean.sh  pyproject.toml  setup.py
atlantos_qc/: constants.py  env.py  main.py
atlantos_qc/bokeh_models/: __init__.py  bokeh_events.py  bokeh_export.py  bokeh_flags.py  bokeh_layout.py  bokeh_loader.py  bokeh_map.py  bokeh_plots.py  bokeh_plots_handler.py  bokeh_sources.py  bokeh_table.py
atlantos_qc/data_models/: __init__.py  computed_parameter.py  cruise_data.py  cruise_data_aqc.py  cruise_data_csv.py  cruise_data_export.py  cruise_data_handler.py  cruise_data_update.py  cruise_data_whp.py  electron_bokeh_bridge.py  exceptions.py  files_handler.py  parameter_equation.py  tools.py
atlantos_qc/data_models/extra/: __init__.py  pycanyonb.py
atlantos_qc/static/js/: custom.js
atlantos_qc/templates/: index.html
atlantos_qc_js/: main.js  package.json
atlantos_qc_js/src/css/: main.css
docs/: How to Debug.md  Upgrade Guidelines.md
ocean_data_qc/: constants.py  env.py
ocean_data_qc/bokeh_models/: bokeh_events.py  bokeh_export.py  bokeh_flags.py  bokeh_layout.py  bokeh_loader.py  bokeh_map.py  bokeh_plots.py  bokeh_plots_handler.py  bokeh_sources.py  bokeh_table.py
ocean_data_qc/data_models/: __init__.py  computed_parameter.py  cruise_data.py  cruise_data_handler.py  electron_bokeh_bridge.py  files_handler.py  octave_equations.py  parameter_equation.py
ocean_data_qc/templates/: index.html
ocean_data_qc_js/: main.js  package.json
scripts/: fix_shebangs.py
(+57 files in other folders)
